syntax = "proto3";

option java_multiple_files = true;
option java_package = "de.saar.minecraft.shared";
option java_outer_classname = "SharedProto";

package minecraft;


// position of the player in the specified game
// x,y,z are the coordinates location where the player is standing
// x-, y-, zDirection is a unit-vector that points into the direction the player is facing
message StatusMessage {
    int32 gameId = 1;
    int32 x = 2;
    int32 y = 3;
    int32 z = 4;
    double xDirection = 5;
    double yDirection = 6;
    double zDirection = 7;
}

enum NewGameState {
    NotChanged = 0;
    TutorialFinished = 1;
    SuccessfullyFinished = 2;
    QuestionnaireFinished = 3;
};

message TextMessage {
    int32 gameId = 1;
    string text = 2;
    NewGameState newGameState = 3;
    // denotes text messages that should not be forwarded
    // but logged as-is by the broker and then discarded.
    bool forLogging = 4;
    string logType = 5;
}

// type is the block material as a string as listed in org.bukkit.Material
message ProtectBlockMessage {
    int32 gameId = 1;
    int32 x = 2;
    int32 y = 3;
    int32 z = 4;
    string type = 5;
}

// type is the block material as a string as listed in org.bukkit.Material
message BlockPlacedMessage {
    int32 gameId = 1;
    int32 x = 2;
    int32 y = 3;
    int32 z = 4;
    string type = 5;
    string replType = 6;
}

// type is the block material as a string as listed in org.bukkit.Material
message BlockDestroyedMessage {
    int32 gameId = 1;
    int32 x = 2;
    int32 y = 3;
    int32 z = 4;
    string type = 5;
}

// the name is the scenario
message WorldSelectMessage {
    int32 gameId = 1;
    string name = 2;
}

// for RPC calls that only need to identify which game is meant
// e.g. endGame.
message GameId {
    int32 id = 1;
}

message MinecraftServerError {
    int32 gameId = 1;
    string message = 2;
}

message WorldFileError {
    int32 gameId = 1;
    string message = 2;
}

message None {

}